master: dictionary, topics, concepts changed

--- a/src/main/java/org/sa/concepts/dictionary/englishToLithuanian.properties
+++ b/src/main/java/org/sa/concepts/dictionary/englishToLithuanian.properties
@@ -1,7 +1,6 @@
+barley=miežiai - javai naudojami maistui, alaus gamybai, gyvulių pašarui.
 diligence=dėmesingumas, rūpestingumas, atsargumas, care, attentiveness, caution
 due=tinkamas, atitinkamas, būtinas, proper, appropriate, necessary
 due\ diligence=tinkamas dėmesingumas, būtinas atsargumas, atitinkamas atsargumas - (tyrimui, nagrinėjimui, patvirtinimui)
 mitigate=sumažinti/sušvelninti
 overdue=late - pavėluotas
-paradigm=model, pattern, or typical example of something
-pivot=turning point, (key) change, posūkis, critical point, reversal - apvertimas.
