--- a/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
+++ b/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
@@ -36,3 +36,5 @@ traverse=systematically move across an area with a purpose
 ubiquitous=means present everywhere (common means frequent)
 vague=not clearly defined, expressed, or stated
 verbose=using too many words
+paradigm=model, pattern, or typical example of something
+pivot=turning point, (key) change, posūkis, critical point, reversal - apvertimas.
