master: managing concepts

--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -1,5 +1,5 @@
-indegree=number of edges directed towards a node.
-outdegree=number of edges directed from a node.
+indegree=number of incoming edges directed towards a node.
+outdegree=number of outgoing edges directed from a node.
 edge\ (graphs)=connection of two nodes.
 undirected\ graph=nodes connected bi-directionally.
 directed\ graph=nodes connected one-directionally.
