--- a/src/main/java/org/sa/concepts/topics/apis.properties
+++ b/src/main/java/org/sa/concepts/topics/apis.properties
@@ -4,7 +4,7 @@ REST=Representational State Transfer - API architecture standard.
 RESTful=1. explicitness(statelessness) 2.client server 3.standard HTTP methods (GET, POST, PUT, DELETE) 4.standard representations (JSON, XML, HTML) 5. layers(controller(endpoints), service(business), data access).
 Swagger=framework that simplifies the process of designing, documenting, and testing RESTful web APIs.
 URL=Uniform Resource Locators.
-Using\ APIs=exchanging data and functionality using predefined rules.
+using\ APIs=exchanging data and functionality using predefined rules.
 nonSemanticMessage=raw payload only, no extra structure or meaning (e.g., plain text, CSV row, raw byte stream)
 semanticMessage=raw data plus metadata or structure that explains the meaning (e.g., JSON with field names)
 gateway=A computer that sits between different networks or applications. The gateway converts data from one protocol format to another.
