--- a/src/main/java/org/sa/concepts/dictionary/englishToLithuanian.properties
+++ b/src/main/java/org/sa/concepts/dictionary/englishToLithuanian.properties
@@ -4,3 +4,4 @@ due=tinkamas, atitinkamas, būtinas, proper, appropriate, necessary
 due\ diligence=tinkamas dėmesingumas, būtinas atsargumas, atitinkamas atsargumas - (tyrimui, nagrinėjimui, patvirtinimui)
 mitigate=sumažinti/sušvelninti
 overdue=late - pavėluotas
+seal=antspaudas, izoliacinis sluoksnis, patvirtinimas
