--- a/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
+++ b/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
@@ -1,6 +1,6 @@
 allocate=reserve a specific amount of any resource, so it's available when needed
 allocate\ a\ list=short for allocate memory for a list
-assess=evaluate/ estimaate quality of
+assess=evaluate/ estimate quality of
 commissioning=bring (something newly produced, such as a factory or machine) into working condition. "we had a few hiccups getting the heating equipment commissioned"
 comply=meet specific standards
 credential=information, proof of the identity or authorization of an entity (such as a user or a system).Include\: username and password, API keys, certificates, tokens, biometric data.
@@ -17,24 +17,23 @@ exponent=a quantity representing the power to which a given number or expression
 facilitate\ meeting=organize meeting
 facility=building
 fetch=go, get it and bring it back
-integrity\ (of\ documents)=\ quality of being accurate, complete, unaltered, not tampered
-intrusive=įkyrus, nepageidaujamas, keliantis trikdžius, trukdandtis
+integrity\ (of\ documents)=quality of being accurate, complete, unaltered, not tampered
+intrusive=annoying, unwanted, causing disturbances, disruptive.
 mitigate=make less severe
-obfuscate\ data=make unclear, unintelligible, encrypt or pseudonimize or anonimize. (etimology\: make obscure)
+obfuscate\ data=make unclear, unintelligible, encrypt or pseudonimize or anonimize. (etimology: make obscure)
 onboarding=integration into organisation
 pagination=sequence of numbers assigned to pages
 proprietary=belonging to company
 remediation=fixing or mitigating of vulnerabilities
 retrieve=get back, bring back; regain possession of
-seal=antspaudas, izoliacinis sluoksnis, patvirtinimas
 substitution=replacement
 tamper=make illegal or/and damaging alterations
 thoroughness=being in regard to every detail.
-to\ prompt=paskatinti, encourage (a hesitating speaker) to say something
-to\ stash=to hide sth.
+to\ prompt=encourage (a hesitating speaker) to say something
+to\ stash=to hide sth in git.
 traverse=systematically move across an area with a purpose
 ubiquitous=means present everywhere (common means frequent)
 vague=not clearly defined, expressed, or stated
 verbose=using too many words
 paradigm=model, pattern, or typical example of something
-pivot=turning point, (key) change, posūkis, critical point, reversal - apvertimas.
+pivot=turning point, (key) change, critical point, reversal.
