master: no need to escape values

--- a/src/main/java/org/sa/concepts/topics/databases.properties
+++ b/src/main/java/org/sa/concepts/topics/databases.properties
@@ -2,7 +2,7 @@ CTE\ (1)=Common Test Environment.
 CTE\ (2)=Common Table Expression - result set of a query which exists temporarily and for use only within the context of a larger query.
 Core=marks that database is main. But in our case there are only core databases so it's a bit meaningless, e.g. "test_lt_core".
 DBA=database administrators.
-NOT\ IN\ (sql)=operator, \!\=
+NOT\ IN\ (sql)=operator, !=
 Partition\ and\ sample=part of database table.
 RDBMS=relational database management system.
 JPQL=Java Persistence Query Language - interacts with databases in a platform-independent way. Automatic translation to actual SQL query depending on platform. Used with JPA.
