--- a/src/main/java/org/sa/concepts/topics/frontend.properties
+++ b/src/main/java/org/sa/concepts/topics/frontend.properties
@@ -1,6 +1,6 @@
 UI\ dialog=secondary window used to display information or prompt user action.
 modal\ window=UI element that blocks interaction with the rest of the interface until closed.
-FDP=frontend development platform (example\: React).
+FDP=frontend development platform (example: React).
 synchronous=each next task starts when previous one ends.
 JSON=JavaScript Object Notation - is a text-based data format representing objects, used for easy data exchange between systems.
 JSX=JavaScript as XML - is an HTML-like syntax used in React to create UI elements.
