master: managed concepts

--- a/src/main/java/org/sa/concepts/topics/regulations.properties
+++ b/src/main/java/org/sa/concepts/topics/regulations.properties
@@ -2,13 +2,16 @@ AFC=anti financial crime.
 DORA=Digital Operational Resilience Act - EU rules rules for financial institutions to manage unforeseen data disruption incidents.
 DSS=data security standard.
 EDD=Enhanced Due Diligence - more thorough investigation of customer - beyond the standard KYC procedures.
-Enterprise-level=scale, complexity, and requirements to meet the needs of large organizations.
+enterprise-level=scale, complexity, and requirements to meet the needs of large organizations.
 GDPR=General Data Protection Regulation - European Union regulation on information privacy.
 Java\ EE=Java Enterprise Edition - platform, which provides a set of specifications for building enterprise-level applications.
 PCI\ DSS=Payment Card Industry Data Security Standard - ensures the secure handling of credit card information during payment transactions.
-Personal\ data\ retention=storing and maintaining individuals' personal information for a specific period.
-Tampering=making illegal or/and damaging alterations.
+personal\ data\ retention=storing and maintaining individuals' personal information for a specific period.
+tampering=making illegal or/and damaging alterations.
 CDD=Customer Due Dilligence - performing customer checks.
 DPIA=Data Protection Impact Assessment - process identifying and minimising risks of the processing of personal data.
 TDC=test data compliance - test data meets standards and regulations.
 GCT=general compliance testing - testing processes to meet standards and regulations.
+DGOM=Data Governance Operating Model - system roles, policies, and processes to ensure data quality, security, and compliance.
+customer\ data\ domain=centralized focus on managing customer data across all systems.
+data\ governance=management of data quality, security, and accessibility through defined roles, rules, and processes.
