--- a/src/main/java/org/sa/concepts/topics-swed/swedbank.properties
+++ b/src/main/java/org/sa/concepts/topics-swed/swedbank.properties
@@ -1,14 +1,12 @@
-#Generated
-#Thu May 01 01:46:52 EEST 2025
 CTE=common test environment.
-CasC=CI/CD team's tool for encrypting. For onboarding to OpenShift it encrypts\: service account credentials and config files.
+CasC=CI/CD team's tool for encrypting. For onboarding to OpenShift it encrypts: service account credentials and config files.
 Conversational\ banking=services provided through AI-driven chat messages - personal support, transactions and access to services.
 ECD=Entreprise Continuous Delivery (team).
 ICDEV=was a custom development environment used by ICD team, but it is no longer in use.
 Incidents=tickets needed to be solved regarding issues. Our team gets assigned ticked regarding problems of STAR.
 Karoo=an external tool - a system overseeing the customer call display in the branch. It interacts with a STAR database to check when the AB was registered.
 Kay\ vault=cloud where everything will be migrated.
-L&P=team\: Lifecycle and Performance.
+L&P=team: Lifecycle and Performance.
 LMI=Log Management and Intelligence (LMI) - platform, where logs are stored long term.
 Omni-channel=experience of transitioning interconnected channels seamlessly and with consistent experience.
 PartyMDM=centralized Party Master Data Management solution used in Swedbank Baltic. Developed by Baltic Customer Data Domain team.
