master: state concept; properties files and custom concepts folder

--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -11,7 +11,7 @@ hash=unique representation of the input data. Used for encryption, integrity ver
 DRY=Don't Repeat Yourself - programming principle.
 encapsulation=Hiding internal elements of object or service. Provides clear separation. Improves maintainability.
 boilerplate=sections of code that have to be included in many places with little or no alteration.
-state=current values of fields of an object.
+state\ (of\ object)=current values of fields.
 abstraction\ (1)=process of hiding complex implementation details and showing only the necessary features.
 abstraction\ (2)=helps to manage complexity by hiding implementation details and exposing only essential features.
 abstraction\ (3)=examples\: Interfaces, Abstract Classes, Modules and Packages, APIs (Application Programming Interfaces), Design Patterns (e.g., Facade Pattern, Decorator Pattern), Layered Architecture, Frameworks and Libraries, Database ORM (Object-Relational Mapping), Microservices, Virtual Machines and Containers.
