master: menu improvements

--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -28,6 +28,7 @@ Hungarian\ pollution=overusing type prefixes in variable names.
 technical\ debt=accumulated code imperfections.
 irreversible\ data\ transformation=not possible to obtain the original input from the outcome.
 DSL=Domain-Specific Language - syntax, designed for a specific problem domain, as opposed to being a general-purpose. Example: Thymeleaf provides DSL for HTML.
-
+dispose\ of\ a\ list=release the list and its resources.
+dispose\ of\ memory=free up or release memory
 
 
