master: added concept requirements / prompt; managed concepts

--- a/src/main/java/org/sa/concepts/topics/generalITTerms.properties
+++ b/src/main/java/org/sa/concepts/topics/generalITTerms.properties
@@ -7,4 +7,4 @@ hub=central point, where things are executed.
 framework=reusable and extensible structure that helps building applications.
 AD=architecture description.
 cross\ architecture=making sure components fit well: front, back, data, infrastructure and security
-
+SSO=Single Sign-On - authentication method for accessing multiple apps with one login.
