--- a/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
+++ b/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
@@ -20,8 +20,8 @@ PPTE=pre production test environment.
 Penetration\ testing=authorized simulated cyberattack on a computer system, performed to evaluate the security of the system.
 Provisioning=making hardware, software, or data, available and ready for use.
 Regression\ Testing=Testing to ensure new changes don't negatively impact existing functionality.
-SLI=Service Level Indicator - Metric measuring system performance.
-SLO=Service Level Objective - Target level of performance for reliability.
+SLI=Service Level Indicator - metric measuring system performance.
+SLO=Service Level Objective - target level of performance for reliability.
 Security\ Testing=identifies vulnerabilities and security risks in the software.
 Staging\ Environment=closely resembles the production environment without affecting actual production data.
 Stub=small piece of code that stands in for a larger piece of code. Simulates non implemented functionality. Isolates parts of program for testing.
