--- a/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
+++ b/src/main/java/org/sa/concepts/topics/workUsefulEnglish.properties
@@ -35,3 +35,6 @@ vague=not clearly defined, expressed, or stated
 verbose=using too many words
 paradigm=model, pattern, or typical example of something
 pivot=turning point, (key) change, critical point, reversal.
+hyphen\ (-)=dash for joining words, example: "well-known", type: button on keyboard
+enDash\ (–)=dash for range or connection, example: "New York – Boston", type: Alt+0150
+emDash\ (—)=dash for separation or emphasis, example: "He was gone—just like that.", type: Alt+0151
