--- a/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
+++ b/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
@@ -1,13 +1,13 @@
-Stakeholders=everyone with interest in outcome - customers/users, APO, analysts, team, testers, manager, regulatory authorities, security, leadership, marketing, support, customer service etc.
-Value\ stream=sequence of processes, company uses to deliver product. Encompasses all the steps. May include insights into the efficiency, bottlenecks, areas for improvements.
-Life\ cycle\ management=managing the entire lifespan of a product. Includes initial concept, development through usage, maintenance and retirement.
+stakeholders=everyone with interest in outcome - customers/users, APO, analysts, team, testers, manager, regulatory authorities, security, leadership, marketing, support, customer service etc.
+value\ stream=sequence of processes, company uses to deliver product. Encompasses all the steps. May include insights into the efficiency, bottlenecks, areas for improvements.
+life\ cycle\ management=managing the entire lifespan of a product. Includes initial concept, development through usage, maintenance and retirement.
 legal\ person=legal personality, legal entity, juridical person.
 PI\ planning=Program Increment planning - aligns teams, sets objectives, and plans iterations collaboratively.
-WoW=way of working.
+WoW=Way of working - team's established approach to tasks and collaboration.
 CFT=cross functional team - individuals with different areas of expertise.
-operational\ risk=risk of loss in the result of\: internal process, people, system, external events.
+operational\ risk=risk of loss in the result of: internal process, people, system, external events.
 OKR=objectives and key requirements.
-What\ is\ a\ product\ backlog\ in\ agile\ project\ management?=prioritized list of features, enhancements, bug fixes, and other work items that need to be addressed in a product.
+what\ is\ a\ product\ backlog\ in\ agile\ project\ management?=prioritized list of features, enhancements, bug fixes, and other work items that need to be addressed in a product.
 RBAC=role based access control - system of user access rights based on their role within an organization.
 Gateway\ team\ in\ an\ enterprise=ensures a secure digital environment by managing network security, access controls, and incident response protocols to safeguard data effectively.
 CI=Configuration Item - any component that needs to be managed in order to deliver an IT service.
