--- a/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
+++ b/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
@@ -7,7 +7,7 @@ deploying=making app available on a target environment. For example production e
 CICD=C - continuous (automatic), I - integration (merging code and testing it), D - delivery (deploying).
 code\ integration=combining code changes from multiple contributors into a shared repository.
 Assemble=specific phase within the build process - collecting and combining individual components into larger units.
-key\ Components\ of\ Continuous\ Integration=VCS (e.g. Git), automated builds for compiling and error checking, automated tests, continuous feedback for immediate issue resolution, and a build server (e.g., Jenkins) to monitor VCS and trigger builds/tests.
+key\ components\ of\ continuous\ integration=VCS (e.g. Git), automated builds for compiling and error checking, automated tests, continuous feedback for immediate issue resolution, and a build server (e.g., Jenkins) to monitor VCS and trigger builds/tests.
 Ingress\ Controller=Kubernetes component that manages external access to services.
 git\ stash=\ to temporarily save changes (that are not ready to be committed) to a temporary storage, that can be retrieved later.
 roll\ out=deployment and activation of a new product or feature for use.
