master: concept of version controll access

--- a/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
+++ b/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
@@ -9,5 +9,6 @@ code\ integration=combining code changes from multiple contributors into a share
 Assemble=specific phase within the build process - collecting and combining individual components into larger units.
 key\ components\ of\ continuous\ integration=VCS (e.g. Git), automated builds for compiling and error checking, automated tests, continuous feedback for immediate issue resolution, and a build server (e.g., Jenkins) to monitor VCS and trigger builds/tests.
 Ingress\ Controller=Kubernetes component that manages external access to services.
-git\ stash=\ to temporarily save changes (that are not ready to be committed) to a temporary storage, that can be retrieved later.
+git\ stash=git command for terminal to temporarily save changes (that are not ready to be committed) to a temporary storage, that can be retrieved later.
+GitHub\ repository\ access\ HTTPS\ vs\ SSH=HTTPS uses username/password, SSH uses cryptographic keys (no password).
 roll\ out=deployment and activation of a new product or feature for use.
