master: concept 'justified vs excusable'

--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -30,5 +30,5 @@ irreversible\ data\ transformation=not possible to obtain the original input fro
 DSL=Domain-Specific Language - syntax, designed for a specific problem domain, as opposed to being a general-purpose. Example: Thymeleaf provides DSL for HTML.
 dispose\ of\ a\ list=release the list and its resources.
 dispose\ of\ memory=free up or release memory
-
+justified\ vs\ excusable=justified focuses on positives despite downsides; excusable tolerates known flaws.
 
