master: managed concepts

--- a/src/main/java/org/sa/concepts/dictionary/generalEnglishToDefinitions.properties
+++ b/src/main/java/org/sa/concepts/dictionary/generalEnglishToDefinitions.properties
@@ -13,4 +13,5 @@ trivial\ logic=logic should be simple and self-evident, requiring no additional 
 trivial\ names=names should clearly convey their purpose, making their intent immediately obvious.
 trivial\ solutions=favor the simplest solutions over overcomplicated designs or abstractions.
 veneer=thin layer of material applied over another to provide a decorative or protective finish.
-infer=Draw a conclusion based on known information.
+infer=draw a conclusion based on known information.
+heap=pile
