--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -31,4 +31,4 @@ DSL=Domain-Specific Language - syntax, designed for a specific problem domain, a
 dispose\ of\ a\ list=release the list and its resources.
 dispose\ of\ memory=free up or release memory
 justified\ vs\ excusable=justified focuses on positives despite downsides; excusable tolerates known flaws.
-
+heap=ordered data structure, in Java implemented as PriorityQueue. Good for efficient sorting.
