--- a/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
+++ b/src/main/java/org/sa/concepts/topics/ciCdAndDevOps.properties
@@ -1,14 +1,16 @@
-DevOps=practices, principles, and cultural philosophies. The primary goal is to automate the process of software delivery and infrastructure changes.
+DevOps=practices, principles, philosophies on automation of the process of software delivery and infrastructure changes.
 DevSecOps=practice of integrating security seamlessly into every phase of the software development and delivery pipeline.
-Jenkins=automating tasks like code integration, testing, and deployment.
+Jenkins=app for automating tasks like code integration, testing, and deployment. Written in Java.
 pipeline=process of building, testing and deploying. Often associated with automatisation.
-build=entire process for execution - compiling source files, linking libraries, and packaging resources into a distributable format
+build=entire preparation for execution - compiling files, linking libraries, and packaging into a distributable format.
 deploying=making app available on a target environment. For example production environment.
-CICD=C - continuous (automatic), I - integration (merging code and testing it), D - delivery (deploying).
+CI/CD=C - continuous (automatic), I - integration (merging code and testing it), D - delivery (deploying).
 code\ integration=combining code changes from multiple contributors into a shared repository.
-Assemble=specific phase within the build process - collecting and combining individual components into larger units.
-key\ components\ of\ continuous\ integration=VCS (e.g. Git), automated builds for compiling and error checking, automated tests, continuous feedback for immediate issue resolution, and a build server (e.g., Jenkins) to monitor VCS and trigger builds/tests.
+assemble=specific phase within the build process - collecting and combining individual components into larger units.
+continuous\ integration\ components=VCS (e.g., Git), automated: builds, tests, feedback, build server (e.g., Jenkins).
 Ingress\ Controller=Kubernetes component that manages external access to services.
-git\ stash=git command for terminal to temporarily save changes (that are not ready to be committed) to a temporary storage, that can be retrieved later.
+git\ stash=git command to temporarily save uncommitted changes for later retrieval.
 GitHub\ repository\ access\ HTTPS\ vs\ SSH=HTTPS uses username/password, SSH uses cryptographic keys (no password).
 roll\ out=deployment and activation of a new product or feature for use.
+heap\ space=memory area during program execution, for storing objects.
+memory\ lack\ in\ Jenkins=due to large builds, extensive test suites, or insufficient memory allocation in JVM settings.
