--- a/src/main/java/org/sa/concepts/topics/generalITTerms.properties
+++ b/src/main/java/org/sa/concepts/topics/generalITTerms.properties
@@ -8,3 +8,4 @@ framework=reusable and extensible structure that helps building applications.
 AD=architecture description.
 cross\ architecture=making sure components fit well: front, back, data, infrastructure and security
 SSO=Single Sign-On - authentication method for accessing multiple apps with one login.
+detrimental=causing harm, e.g. "Memory leaks are detrimental to performance."
