master: deque and hummingbird concepts

--- a/src/main/java/org/sa/concepts/dictionary/englishToLithuanian.properties
+++ b/src/main/java/org/sa/concepts/dictionary/englishToLithuanian.properties
@@ -5,3 +5,4 @@ due\ diligence=tinkamas dėmesingumas, būtinas atsargumas, atitinkamas atsargum
 mitigate=sumažinti/sušvelninti
 overdue=late - pavėluotas
 seal=antspaudas, izoliacinis sluoksnis, patvirtinimas
+hummingbird=kolibris
