master: concept nevidonas

--- a/src/main/java/org/sa/concepts/dictionary/lithuanianRare.properties
+++ b/src/main/java/org/sa/concepts/dictionary/lithuanianRare.properties
@@ -3,3 +3,4 @@ nearaliuotas=neišauklėtas (gyvulys)
 vienok=tačiau, vis dėl to, bet
 paikas=menkos nuovokos, kvaišelis
 kudašius=kuodas
+nevidonas=nenaudėlis, piktadarys
