--- a/src/main/java/org/sa/concepts/topics/databases.properties
+++ b/src/main/java/org/sa/concepts/topics/databases.properties
@@ -8,3 +8,4 @@ RDBMS=relational database management system.
 JPQL=Java Persistence Query Language - interacts with databases in a platform-independent way. Automatic translation to actual SQL query depending on platform. Used with JPA.
 Hibernate=ORM framework for the Java - forerunner of JPA.
 ORM=Object-Relational Mapping - interaction between a database and OOP. database operations are performed using objects and classes rather than raw SQL queries. E.g.\: Hibernate for Java.
+DAO=Data Access Object - object with custom CRUD methods to interact with database.
