master: define all and define all all prtinting to concole when fragments are not found

--- a/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
+++ b/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
@@ -1,37 +1,37 @@
 A/B\ testing=split testing - compare two versions (A and B) of a webpage.
-Accessibility\ Testing=ensures software usability for individuals with disabilities.
+accessibility\ testing=ensures software usability for individuals with disabilities.
 Agile\ Test\ Quadrants=concept categorizing types of testing. Based on two axes\: technology-facing and business-facing.
 Canary\ deployment=new version app is gradually rolled out to a small subset of users or servers before being deployed to the entire infrastructure.
-Chaos\ engineering=injecting controlled instances of failure into a system to identify vulnerabilities.
-Compatibility\ Testing=checks software performance across different environments and setups.
+chaos\ engineering=injecting controlled instances of failure into a system to identify vulnerabilities.
+compatibility\ testing=checks software performance across different environments and setups.
 DDoS\ attacks=Distributed denial-of service attacks.
 DRT=Disaster Recovery Tests - process, that enables service to prepare and test support functions for the actual Disaster Recovery.
-Data\ Pseudonymization=protecting privacy by replacing or encrypting personally identifiable information (PII) with artificial identifiers (pseudonyms).
-Error\ budget=Maximum allowable errors metric in a system within a specified time frame for reliability.
-Exploratory\ Testing=flexible approach to uncover unexpected defects and understand behavior.
-Feature\ flag=feature toggle.
-Functional\ Testing=Verifies that software features align with specified requirements.
+data\ pseudonymization=protecting privacy by replacing or encrypting personally identifiable information (PII) with artificial identifiers (pseudonyms).
+error\ budget=Maximum allowable errors metric in a system within a specified time frame for reliability.
+exploratory\ testing=flexible approach to uncover unexpected defects and understand behavior.
+feature\ flag=feature toggle.
+functional\ testing=Verifies that software features align with specified requirements.
 GPA=general purpose app.
-Integrated\ test\ environment=test environment that closely resembles the production environment.
-Integration\ Testing=Ensures integrated software components work together as intended.
+integrated\ test\ environment=test environment that closely resembles the production environment.
+integration\ testing=Ensures integrated software components work together as intended.
 KPI=key performance indicator.
-Localization\ and\ Internationalization\ Testing=adapts software for different languages and tests for global use.
+localization\ and\ internationalization\ testing=adapts software for different languages and tests for global use.
 PPTE=pre production test environment.
-Penetration\ testing=authorized simulated cyberattack on a computer system, performed to evaluate the security of the system.
-Provisioning=making hardware, software, or data, available and ready for use.
-Regression\ Testing=Testing to ensure new changes don't negatively impact existing functionality.
+penetration\ testing=authorized simulated cyberattack on a computer system, performed to evaluate the security of the system.
+provisioning=making hardware, software, or data, available and ready for use.
+regression\ testing=Testing to ensure new changes don't negatively impact existing functionality.
 SLI=Service Level Indicator - metric measuring system performance.
 SLO=Service Level Objective - target level of performance for reliability.
-Security\ Testing=identifies vulnerabilities and security risks in the software.
-Staging\ Environment=closely resembles the production environment without affecting actual production data.
-Stub=small piece of code that stands in for a larger piece of code. Simulates non implemented functionality. Isolates parts of program for testing.
-Subsetting\ data=selecting and using a representative portion of a larger dataset.
+security\ testing=identifies vulnerabilities and security risks in the software.
+staging\ environment=closely resembles the production environment without affecting actual production data.
+stub=small piece of code that stands in for a larger piece of code. Simulates non implemented functionality. Isolates parts of program for testing.
+subsetting\ data=selecting and using a representative portion of a larger dataset.
 TDM=Test Data Management.
-Test\ data\ management\ for\ entreprise=meeting the needs of an organization rather than specific individual or teams needs.
-Test\ integration=combining individual software components or modules and testing them together, if they work when integrated into a larger system.
-Test\ pilot=limited-scale implementation or trial of new version. Conducted before a full-scale release to a wider audience. Allows testing, gathering feedback, identify issues or improvements.
+test\ data\ management\ for\ entreprise=meeting the needs of an organization rather than specific individual or teams needs.
+test\ integration=combining individual software components or modules and testing them together, if they work when integrated into a larger system.
+test\ pilot=limited-scale implementation or trial of new version. Conducted before a full-scale release to a wider audience. Allows testing, gathering feedback, identify issues or improvements.
 UAT=User Acceptance Testing - validates software from end users' perspective for alignment with needs.
-Unit\ Testing=Testing individual units of code in isolation (AKA component testing).
-Usability\ Testing=evaluates user-friendliness and overall user experience.
+unit\ testing=Testing individual units of code in isolation (AKA component testing).
+usability\ testing=evaluates user-friendliness and overall user experience.
 XSS=Cross-Site Scripting - is a security vulnerability that allows attackers to inject malicious scripts into web pages viewed by other users.
-Performance\ Testing=Testing the performance and scalability of a software application under various conditions.
+performance\ testing=Testing the performance and scalability of a software application under various conditions.
