--- a/src/main/java/org/sa/concepts/topics/generalITTerms.properties
+++ b/src/main/java/org/sa/concepts/topics/generalITTerms.properties
@@ -9,3 +9,5 @@ AD=architecture description.
 cross\ architecture=making sure components fit well: front, back, data, infrastructure and security
 SSO=Single Sign-On - authentication method for accessing multiple apps with one login.
 detrimental=causing harm, e.g. "Memory leaks are detrimental to performance."
+infer=deduce info from evidence, not explicit statements. Java example: in "var x = stream.toList()", x is inferred as a List.
+deduce=conclude
