master: test pilot concept

--- a/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
+++ b/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
@@ -29,7 +29,7 @@ subsetting\ data=selecting and using a representative portion of a larger datase
 TDM=Test Data Management.
 test\ data\ management\ for\ entreprise=meeting the needs of an organization rather than specific individual or teams needs.
 test\ integration=combining individual software components or modules and testing them together, if they work when integrated into a larger system.
-test\ pilot=limited-scale implementation or trial of new version. Conducted before a full-scale release to a wider audience. Allows testing, gathering feedback, identify issues or improvements.
+test\ pilot=limited-scale trial of a new version before full release, for testing, feedback, and identifying issues.
 UAT=User Acceptance Testing - validates software from end users' perspective for alignment with needs.
 unit\ testing=Testing individual units of code in isolation (AKA component testing).
 usability\ testing=evaluates user-friendliness and overall user experience.
