master: business concepts

--- a/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
+++ b/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
@@ -1,21 +1,22 @@
-stakeholders=everyone with interest in outcome - customers/users, APO, analysts, team, testers, manager, regulatory authorities, security, leadership, marketing, support, customer service etc.
-value\ stream=sequence of processes, company uses to deliver product. Encompasses all the steps. May include insights into the efficiency, bottlenecks, areas for improvements.
-life\ cycle\ management=managing the entire lifespan of a product. Includes initial concept, development through usage, maintenance and retirement.
+stakeholder=one with interest in outcome: customer, team, tester, manager, regulator, security, leadership, marketing.
+value\ stream=sequence of processes a company uses to deliver product, showing steps, efficiency, and bottlenecks.
+life\ cycle\ management=managing a product’s full lifespan: concept, development, use, maintenance, retirement.
 legal\ person=legal personality, legal entity, juridical person.
 PI\ planning=Program Increment planning - aligns teams, sets objectives, and plans iterations collaboratively.
 WoW=Way of working - team's established approach to tasks and collaboration.
 CFT=cross functional team - individuals with different areas of expertise.
 operational\ risk=risk of loss in the result of: internal process, people, system, external events.
 OKR=objectives and key requirements.
-what\ is\ a\ product\ backlog\ in\ agile\ project\ management?=prioritized list of features, enhancements, bug fixes, and other work items that need to be addressed in a product.
+backlog=pending tasks or features to complete.
+product\ backlog\ (agile)=prioritized list of features and tasks in agile projects.
 RBAC=role based access control - system of user access rights based on their role within an organization.
-Gateway\ team\ in\ an\ enterprise=ensures a secure digital environment by managing network security, access controls, and incident response protocols to safeguard data effectively.
+gateway\ team=protecting network by managing security, access, and their incidents.
 CI=Configuration Item - any component that needs to be managed in order to deliver an IT service.
 ubiquitous\ language=shared, common, used by both domain experts and developers to describe and discuss the domain model.
 PR=public release.
 postmortem=structured analysis that takes place after a failure has occurred.
 Liferay=content management system (CMS). Pre-made, highly customisable website for enterprise. Covers backend and frontend.
-
+streamline=remove obstacles and add improvements to optimize.
 
 
 
