--- a/src/main/java/org/sa/concepts/topics/generalITTerms.properties
+++ b/src/main/java/org/sa/concepts/topics/generalITTerms.properties
@@ -11,3 +11,4 @@ SSO=Single Sign-On - authentication method for accessing multiple apps with one 
 detrimental=causing harm, e.g. "Memory leaks are detrimental to performance."
 infer=deduce info from evidence, not explicit statements. Java example: in "var x = stream.toList()", x is inferred as a List.
 deduce=conclude
+ICT\ system=Information and Communication Technology setup including hardware, software, networks, and people for data handling and communication.
