--- a/src/main/java/org/sa/concepts/topics/regulations.properties
+++ b/src/main/java/org/sa/concepts/topics/regulations.properties
@@ -15,3 +15,7 @@ GCT=general compliance testing - testing processes to meet standards and regulat
 DGOM=Data Governance Operating Model - system roles, policies, and processes to ensure data quality, security, and compliance.
 customer\ data\ domain=centralized focus on managing customer data across all systems.
 data\ governance=management of data quality, security, and accessibility through defined roles, rules, and processes.
+custody=legal responsibility for care or control.
+data\ custodian=person/team managing data storage, security, and maintenance.
+ECB - Europien Central Bank
+ECB\ stress\ test=European Central Bank’s check of banks’ strength under tough economic conditions.
