--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -14,7 +14,7 @@ boilerplate=sections of code that have to be included in many places with little
 state\ (of\ object)=current values of fields.
 abstraction\ (1)=process of hiding complex implementation details and showing only the necessary features.
 abstraction\ (2)=helps to manage complexity by hiding implementation details and exposing only essential features.
-abstraction\ (3)=examples\: Interfaces, Abstract Classes, Modules and Packages, APIs (Application Programming Interfaces), Design Patterns (e.g., Facade Pattern, Decorator Pattern), Layered Architecture, Frameworks and Libraries, Database ORM (Object-Relational Mapping), Microservices, Virtual Machines and Containers.
+abstraction\ (3)=examples: Interfaces, Abstract Classes, Modules and Packages, APIs (Application Programming Interfaces), Design Patterns (e.g., Facade Pattern, Decorator Pattern), Layered Architecture, Frameworks and Libraries, Database ORM (Object-Relational Mapping), Microservices, Virtual Machines and Containers.
 cohesion=degree to which elements of a module or class are related and work together to achieve a single purpose.
 cohesion\ example=A UserManager class with methods createUser, deleteUser, and updateUser has high cohesion, focusing solely on user management.
 coupling=degree of interdependence between software modules.
