master: minor concept changes

--- a/src/main/java/org/sa/concepts/topics/hardware.properties
+++ b/src/main/java/org/sa/concepts/topics/hardware.properties
@@ -1,4 +1,4 @@
 YubiKey=A flash drive for security purposes on a Mac.
 NFC=Near Field Communication - wireless communication technology that allows data exchange between devices over a very short distance, typically a few centimeters.
-operations\ specialist=takes care of IT infrastructure: severs, networks, hardware. Deploys and configures software apps
+operations\ specialist=takes care of IT infrastructure: severs, networks, hardware. Deploys and configures apps.
 Unix=operating system. Linux is a Unix - like, but not a direct descendant.
