--- a/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
+++ b/src/main/java/org/sa/concepts/topics/qaAndTesting.properties
@@ -15,7 +15,7 @@ feature\ flag=feature toggle.
 functional\ testing=Verifies that software features align with specified requirements.
 GPA=general purpose app.
 integrated\ test\ environment=test environment that closely resembles the production environment.
-integration\ testing=Ensures integrated software components work together as intended.
+integration\ testing=ensures integrated software components work together as intended.
 KPI=key performance indicator.
 localization\ and\ internationalization\ testing=adapts software for different languages and tests for global use.
 PPTE=pre production test environment.
