master: changes in concepts

--- a/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
+++ b/src/main/java/org/sa/concepts/topics/businessAndWorkplace.properties
@@ -17,6 +17,8 @@ PR=public release.
 postmortem=structured analysis that takes place after a failure has occurred.
 Liferay=content management system (CMS). Pre-made, highly customisable website for enterprise. Covers backend and frontend.
 streamline=remove obstacles and add improvements to optimize.
+CTO=Chief Technology Officer - executive responsible for overseeing technological development and innovation.
+MLM=Multi-Level Marketing - strategy where salespeople earn from personal sales and sales made by their recruits.
 
 
 
