--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -27,7 +27,7 @@ proxy\ pattern=creating a proxy to control access to a real object, both impleme
 Hungarian\ pollution=overusing type prefixes in variable names.
 technical\ debt=accumulated code imperfections.
 irreversible\ data\ transformation=not possible to obtain the original input from the outcome.
-DSL=Domain-Specific Language - syntax, designed for a specific problem domain, as opposed to being a general-purpose. Example: Thymeleaf provides DSL for HTML.
+DSL=Domain-Specific Language – syntax tailored to a non-general domain. Example: Thymeleaf provides DSL for HTML.
 dispose\ of\ a\ list=release the list and its resources.
 dispose\ of\ memory=free up or release memory
 justified\ vs\ excusable=justified focuses on positives despite downsides; excusable tolerates known flaws.
