master: concept defensive programming

--- a/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
+++ b/src/main/java/org/sa/concepts/topics/algorithmsCodingAndStructures.properties
@@ -21,7 +21,8 @@ coupling=degree of interdependence between software modules.
 factory\ design\ pattern=provides an interface for creating instances of a class, allowing subclasses to alter the type of objects that will be created.
 collision\ resistant=different inputs should not produce the same outcome.
 deterministic=same input will always produce the same outcome.
-defensive\ programming=ensuring that software behaves as expected even when encountering unexpected inputs or conditions. Input validation, error handling, robustness, fail-safe defaults, clear documentation.
+defensive\ programming=ensuring software behaves as expected even when encountering unexpected inputs or conditions.
+means\ of\ defensive\ programming=input validation, error handling, robustness, fail-safe defaults, clear documentation.
 lazy\ initialization=object creation delayed until first use, improving performance and reducing resource consumption.
 proxy\ pattern=creating a proxy to control access to a real object, both implementing the same interface, with the proxy being used externally.
 Hungarian\ pollution=overusing type prefixes in variable names.
